# django_nlp

./: .platform.app.yaml  Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt  vercel.json
django_nlp/: asgi.py  settings.py  urls.py  wsgi.py
main_app/: urls.py  views.py
main_app/templates/: base.html  home.html  lemma.html  ner.html  pos.html  regex.html
