[tool.poetry]
name = "django-nlp"
version = "0.1.0"
description = ""
authors = ["anjoo91 <andrew.w.lew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"
spacy = "^3.6.1"
requests = "^2.31.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
